<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifView"
        android:layout_width="826dp"
        android:layout_height="889dp"
        android:src="@drawable/beijing"
        android:translationX="-180dp"
        android:translationY="-80dp" />

    <TextView
        android:id="@+id/textView"
        android:textSize="25sp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationY="0dp"
        android:textColor="@color/white"
        android:text="@string/about" />

    <TextView
        android:id="@+id/textView2"
        android:textSize="25sp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationY="0dp"
        android:textColor="@color/white"
        android:text="@string/about2" />

    <TextView
        android:id="@+id/textView3"
        android:textSize="25sp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:layout_gravity="center|bottom"
        android:gravity="center_horizontal"
        android:layout_marginBottom="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationY="0dp"
        android:textColor="@color/white"
        android:text="@string/about3" />

</FrameLayout>